feat: completed task 01c

--- a/01_Homework/01c_Python.ipynb
+++ b/01_Homework/01c_Python.ipynb
@@ -33,13 +33,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
    "id": "f7206be1",
    "metadata": {},
-   "source": [
-    "# 📝 Dein Code:\n"
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hallo, ich heisse Nico, bin 17 Jahre alt und 1.73 Meter gross.\n"
+     ]
+    }
    ],
-   "outputs": [],
-   "execution_count": null
+   "source": [
+    "# 📝 Dein Code:\n",
+    "print(\"Hallo, ich heisse Nico, bin 17 Jahre alt und 1.73 Meter gross.\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -68,13 +77,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "d17f8733",
    "metadata": {},
-   "source": [
-    "# 📝 Dein Code:\n"
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Volljährig'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
    ],
-   "outputs": [],
-   "execution_count": null
+   "source": [
+    "# 📝 Dein Code:\n",
+    "\n",
+    "def is_old_enough(age):\n",
+    "  if (age >= 18):\n",
+    "    return \"Volljährig\"\n",
+    "  else:\n",
+    "    return \"Minderjährig\"\n",
+    "\n",
+    "age = 18\n",
+    "\n",
+    "is_old_enough(age)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -114,13 +144,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
    "id": "0dd50b8e",
    "metadata": {},
-   "source": [
-    "# 📝 Dein Code:\n"
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "10\n",
+      "9\n",
+      "8\n",
+      "7\n",
+      "6\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n"
+     ]
+    }
    ],
-   "outputs": [],
-   "execution_count": null
+   "source": [
+    "# 📝 Dein Code:\n",
+    "for i in range (1, 11):\n",
+    "  print(i)\n",
+    "\n",
+    "i = 10\n",
+    "while i > 0:\n",
+    "  print(i)\n",
+    "  i -= 1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -147,14 +211,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
    "id": "e1511c264c3b206d",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Anna\n",
+      "Ben\n",
+      "Carla\n",
+      "David\n",
+      "Eva\n"
+     ]
+    }
+   ],
    "source": [
     "# 📝 Dein Code:\n",
-    "namen = ..."
-   ],
-   "outputs": [],
-   "execution_count": null
+    "namen = [\"Anna\", \"Ben\", \"Carla\", \"David\", \"Eva\"]\n",
+    "\n",
+    "for name in namen:\n",
+    "  print(name)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -179,13 +258,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
    "id": "270cd255acde338b",
    "metadata": {},
-   "source": [
-    "# 📝 Dein Code:\n"
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hallo Nico, du bist 17 alt.\n",
+      "Hallo Fabian, du bist 18 alt.\n",
+      "Hallo Patrick, du bist 17 alt.\n"
+     ]
+    }
    ],
-   "outputs": [],
-   "execution_count": null
+   "source": [
+    "# 📝 Dein Code:\n",
+    "def greetings(name, age):\n",
+    "  print(f\"Hallo {name}, du bist {age} alt.\")\n",
+    "\n",
+    "greetings(\"Nico\", 17)\n",
+    "greetings(\"Fabian\", 18)\n",
+    "greetings(\"Patrick\", 17)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -208,13 +303,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
    "id": "1aea9590362e4d92",
    "metadata": {},
-   "source": [
-    "# 📝 Dein Code:\n"
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Die Summe ist 15\n"
+     ]
+    }
    ],
-   "outputs": [],
-   "execution_count": null
+   "source": [
+    "# 📝 Dein Code:\n",
+    "def sum(x, y):\n",
+    "  print(f\"Die Summe ist {x + y}\")\n",
+    "\n",
+    "sum(7, 8)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -236,13 +343,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
    "id": "6c9350f78f4ff636",
    "metadata": {},
-   "source": [
-    "# 📝 Dein Code:\n"
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You guessed correctly\n"
+     ]
+    }
    ],
-   "outputs": [],
-   "execution_count": null
+   "source": [
+    "# 📝 Dein Code:\n",
+    "import random\n",
+    "\n",
+    "random_number = random.randint(1, 10)\n",
+    "\n",
+    "guess = 0\n",
+    "\n",
+    "while int(guess) != random_number:\n",
+    "  guess = input(\"Guess the random number: \")\n",
+    "\n",
+    "print(\"You guessed correctly\")\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -271,13 +397,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
    "id": "65e9f85786cd599",
    "metadata": {},
-   "source": [
-    "# 📝 Dein Code:\n"
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your name in uppercase: NICO B\n",
+      "Your name in lowercase: nico b\n",
+      "Your names length: 5\n"
+     ]
+    }
    ],
-   "outputs": [],
-   "execution_count": null
+   "source": [
+    "# 📝 Dein Code:\n",
+    "name = input(\"Enter your name: \")\n",
+    "print(f\"Your name in uppercase: {name.upper()}\")\n",
+    "print(f\"Your name in lowercase: {name.lower()}\")\n",
+    "print(f\"Your names length: {len(name.replace(\" \", \"\"))}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -308,13 +448,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
    "id": "a50ab4c52fefa284",
    "metadata": {},
-   "source": [
-    "# 📝 Dein Code:\n"
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No translation found\n"
+     ]
+    }
    ],
-   "outputs": [],
-   "execution_count": null
+   "source": [
+    "# 📝 Dein Code:\n",
+    "dictionary = {\"apple\": \"Apfel\", \"banana\": \"Banane\", \"cherry\": \"Kirsche\"}\n",
+    "\n",
+    "english_word = input(\"Input an english word: \")\n",
+    "\n",
+    "if english_word in dictionary:\n",
+    "  print(f\"Translation: {dictionary.get(english_word)}\")\n",
+    "else:\n",
+    "  print(\"No translation found\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -358,18 +514,104 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
    "id": "d36506c717a8a629",
    "metadata": {},
-   "source": [
-    "# 📝 Dein Code:\n"
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Options:\n",
+      "1. Show favorite food\n",
+      "2. Add or edit favorite foods\n",
+      "3. Exit\n",
+      "Favorite food of Anna is Pizza\n",
+      "Options:\n",
+      "1. Show favorite food\n",
+      "2. Add or edit favorite foods\n",
+      "3. Exit\n",
+      "Set favorite food of test to be test\n",
+      "Options:\n",
+      "1. Show favorite food\n",
+      "2. Add or edit favorite foods\n",
+      "3. Exit\n",
+      "Favorite food of test is test\n",
+      "Options:\n",
+      "1. Show favorite food\n",
+      "2. Add or edit favorite foods\n",
+      "3. Exit\n",
+      "Invalid input try again\n",
+      "Options:\n",
+      "1. Show favorite food\n",
+      "2. Add or edit favorite foods\n",
+      "3. Exit\n",
+      "Invalid input try again\n",
+      "Options:\n",
+      "1. Show favorite food\n",
+      "2. Add or edit favorite foods\n",
+      "3. Exit\n",
+      "Set favorite food of test to be testtest\n",
+      "Options:\n",
+      "1. Show favorite food\n",
+      "2. Add or edit favorite foods\n",
+      "3. Exit\n",
+      "Favorite food of test is testtest\n",
+      "Options:\n",
+      "1. Show favorite food\n",
+      "2. Add or edit favorite foods\n",
+      "3. Exit\n"
+     ]
+    }
    ],
+   "source": [
+    "# 📝 Dein Code:\n",
+    "favoriteFoods = {\"Anna\": \"Pizza\", \"Ben\": \"Sushi\", \"Clara\": \"Pasta\"}\n",
+    "\n",
+    "while True:\n",
+    "  print(\"Options:\")\n",
+    "  print(\"1. Show favorite food\")\n",
+    "  print(\"2. Add or edit favorite foods\")\n",
+    "  print(\"3. Exit\")\n",
+    "\n",
+    "  selection = input(\"Action (1,2 or 3): \")\n",
+    "\n",
+    "  try:\n",
+    "    validatedSelection = int(selection)\n",
+    "    if not (validatedSelection >= 1 and validatedSelection <= 3):\n",
+    "      raise Exception(\"Input value needs to be between 1,2 or 3\")\n",
+    "  except:\n",
+    "    print(\"Invalid input try again\")\n",
+    "    continue\n",
+    "  \n",
+    "  match validatedSelection:\n",
+    "    case 1:\n",
+    "      name = input(\"Enter name:\")\n",
+    "      if name in favoriteFoods:\n",
+    "        print(f\"Favorite food of {name} is {favoriteFoods[name]}\")\n",
+    "      else:\n",
+    "        print(\"Name not found\")\n",
+    "    case 2:\n",
+    "      name = input(\"Enter name:\")\n",
+    "      food = input(\"Enter favorite food:\")\n",
+    "      favoriteFoods[name] = food\n",
+    "      print(f\"Set favorite food of {name} to be {food}\")\n",
+    "    case 3:\n",
+    "      break\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "abdb0bb7",
+   "metadata": {},
    "outputs": [],
-   "execution_count": null
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": ".venv (3.12.3)",
    "language": "python",
    "name": "python3"
   },
@@ -383,7 +625,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
