fix: small improvments

--- a/01_Homework/01c_Python.ipynb
+++ b/01_Homework/01c_Python.ipynb
@@ -96,7 +96,7 @@
     "# 📝 Dein Code:\n",
     "\n",
     "def is_old_enough(age):\n",
-    "  if (age >= 18):\n",
+    "  if age >= 18:\n",
     "    return \"Volljährig\"\n",
     "  else:\n",
     "    return \"Minderjährig\"\n",
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "0dd50b8e",
    "metadata": {},
    "outputs": [
@@ -177,7 +177,7 @@
    ],
    "source": [
     "# 📝 Dein Code:\n",
-    "for i in range (1, 11):\n",
+    "for i in range(1, 11):\n",
     "  print(i)\n",
     "\n",
     "i = 10\n",
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "d36506c717a8a629",
    "metadata": {},
    "outputs": [
@@ -577,27 +577,27 @@
     "  selection = input(\"Action (1,2 or 3): \")\n",
     "\n",
     "  try:\n",
-    "    validatedSelection = int(selection)\n",
-    "    if not (validatedSelection >= 1 and validatedSelection <= 3):\n",
-    "      raise Exception(\"Input value needs to be between 1,2 or 3\")\n",
+    "      validatedSelection = int(selection)\n",
+    "      if not (1 <= validatedSelection <= 3):\n",
+    "          raise Exception(\"Input value needs to be between 1,2 or 3\")\n",
     "  except:\n",
-    "    print(\"Invalid input try again\")\n",
-    "    continue\n",
-    "  \n",
+    "      print(\"Invalid input try again\")\n",
+    "      continue\n",
+    "\n",
     "  match validatedSelection:\n",
-    "    case 1:\n",
-    "      name = input(\"Enter name:\")\n",
-    "      if name in favoriteFoods:\n",
-    "        print(f\"Favorite food of {name} is {favoriteFoods[name]}\")\n",
-    "      else:\n",
-    "        print(\"Name not found\")\n",
-    "    case 2:\n",
-    "      name = input(\"Enter name:\")\n",
-    "      food = input(\"Enter favorite food:\")\n",
-    "      favoriteFoods[name] = food\n",
-    "      print(f\"Set favorite food of {name} to be {food}\")\n",
-    "    case 3:\n",
-    "      break\n"
+    "      case 1:\n",
+    "          name = input(\"Enter name:\")\n",
+    "          if name in favoriteFoods:\n",
+    "              print(f\"Favorite food of {name} is {favoriteFoods[name]}\")\n",
+    "          else:\n",
+    "              print(\"Name not found\")\n",
+    "      case 2:\n",
+    "          name = input(\"Enter name:\")\n",
+    "          food = input(\"Enter favorite food:\")\n",
+    "          favoriteFoods[name] = food\n",
+    "          print(f\"Set favorite food of {name} to be {food}\")\n",
+    "      case 3:\n",
+    "          break\n"
    ]
   },
   {
