--- a/01_Homework/01f_AI_LinRegression.ipynb
+++ b/01_Homework/01f_AI_LinRegression.ipynb
@@ -31,7 +31,9 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -42,9 +44,7 @@
     "df.info()\n",
     "\n",
     "# Es gibt also insgesamt 9 Spalten und Total 17000 Zeilen"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -57,12 +57,12 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "df.head(5)"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -73,14 +73,14 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "if len(df) > 10_000:\n",
     "    df = df.sample(frac=0.3, random_state=42)\n",
     "print('Neue Anzahl Zeilen:', len(df))"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -93,7 +93,9 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -107,9 +109,7 @@
     "plt.xlabel('x = median_income')\n",
     "plt.ylabel('y = median_house_value')\n",
     "plt.title('Zusammenhang zwischen Einkommen und Hauspreisen');"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -145,7 +145,9 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "import torch\n",
     "\n",
@@ -161,9 +163,7 @@
     "# Die erste Dimension ist die Anzahl der Zeilen/Datenpunkte (17000) und die zweite Dimension ist die Anzahl der Spalten (1)\n",
     "print('X Shape:', X.shape)\n",
     "print('y Shape:', y.shape)"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -176,13 +176,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "X = X / X.max()\n",
     "y = y / y.max()"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -217,7 +217,9 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "from torch.utils.data import Dataset, DataLoader, random_split\n",
     "\n",
@@ -233,9 +235,7 @@
     "    # Die Funktion kann anschliessend mit dataset[index] aufgerufen werden und gibt X und y zurück\n",
     "    def __getitem__(self, index):\n",
     "        return self.X[index], self.y[index]\n"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -246,12 +246,12 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "dataset = HousingDataset(X, y)"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -266,13 +266,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "train_dataset, val_dataset = random_split(dataset=dataset, lengths=[0.8, 0.2])\n",
     "print('train:', len(train_dataset), '| val:', len(val_dataset))"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -284,14 +284,14 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "BATCH_SIZE = 128  # Unser Batch Size ist 128, was bedeutet, dass wir 128 Datenpunkte gleichzeitig in das Netzwerk füttern\n",
     "train_loader = DataLoader(dataset=train_dataset, batch_size=BATCH_SIZE, shuffle=True)\n",
     "val_loader = DataLoader(dataset=val_dataset, batch_size=BATCH_SIZE, shuffle=False)"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -310,7 +310,9 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "from pytorch_lightning import LightningModule, Trainer\n",
     "\n",
@@ -370,9 +372,7 @@
     "    # Die Lernrate gibt an, wie gross die Schritte sind, die der Optimizer macht. Dazu mehr später\n",
     "    def configure_optimizers(self):\n",
     "        return torch.optim.Adam(self.parameters(), lr=self.lr)"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -393,13 +393,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "EPOCHS = 100\n",
     "LEARNING_RATE = 0.001"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -410,13 +410,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "trainer = Trainer(max_epochs=EPOCHS, accelerator='cpu')\n",
-    "model = LinearRegression(lr=LEARNING_RATE)"
-   ],
    "outputs": [],
-   "execution_count": null
+   "source": [
+    "trainer = Trainer(max_epochs=EPOCHS, accelerator='gpu')\n",
+    "model = LinearRegression(lr=LEARNING_RATE)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -427,16 +427,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "trainer.fit(model, train_dataloaders=train_loader, val_dataloaders=val_loader)"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Nun können wir uns die Trainings- und Validierungsfehler anschauen\n",
     "train_loss = model.logged_metrics['train_loss']\n",
@@ -457,9 +459,7 @@
     "plt.xlabel('Epochs')\n",
     "plt.ylabel('Loss (Fehler)')\n",
     "plt.legend();"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -472,7 +472,9 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Wir plotten zuerst die echten Werte\n",
     "plt.scatter(val_dataset.dataset.X, val_dataset.dataset.y, label=\"true\", s=1)\n",
@@ -483,9 +485,7 @@
     "\n",
     "# Wir plotten die Vorhersage als Linie\n",
     "plt.plot(x, y_pred.detach().numpy(), label=\"prediction\", color=\"red\");"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -502,15 +502,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "a = model.layer.weight.item()\n",
     "b = model.layer.bias.item()\n",
     "print(\"Gewicht (Steigung):\", a)\n",
     "print(\"Bias (y-Achsenabschnitt):\", b)"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -521,7 +521,9 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Wir plotten zuerst die echten Werte\n",
     "plt.scatter(val_dataset.dataset.X, val_dataset.dataset.y, label='true', s=1)\n",
@@ -535,9 +537,7 @@
     "    b = 0\n",
     "    plt.plot(x, x * weight + bias, color=(r, g, b), alpha=0.5, label='prediction')\n",
     "plt.title('Gewicht und Bias während des Trainings');"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -551,8 +551,23 @@
     "\n",
     "- Welcher Einfluss haben folgende Hyperparameter auf das Training und den Trainings-Erfolg? Wie verändert sich die Lernkurve?\n",
     "  - Anzahl Epochen `EPOCHS`\n",
+    "  Antwort:\n",
+    "    - Bei wenigen Epochen hat das Model zu wenig zeit um zu Lernen.\n",
+    "    - Bei vielen Epochen lernt das Model die Daten auswendig\n",
+    "    - Bei der Optimalen Anzahl hat das Modell genug Zeit zum Lernen hat aber zu wenig das es die Daten auswendig lernt.\n",
+    "\n",
+    "\n",
     "  - Learnrate `lr` in der Funktion `configure_optimizers()`\n",
+    "  Antwort:\n",
+    "    - Wenn die Lernrate klein eingestellt ist lernt das Modell sehr langsam.\n",
+    "    - Wenn die Lernrate hoch eingestellt ist lernt das Modell instabil, was zu einem höheren Verlust wird.\n",
+    "    - Wenn die Lernrate korrekt eingestellt ist lernt es gleichmässig und verliert nicht übermässig Daten.\n",
+    "\n",
     "  - Batch Grösse `BATCH_SIZE`\n",
+    "  Antwort:\n",
+    "    - Kleine Batches bringen mehr Updates pro Epoche, was aber zu einer Unruhigen Lernkurve führt.\n",
+    "    - Grosse Batches bringen weniger Updates pro Epoche was zu Langsamen lernen führt.\n",
+    "    - Mit der optimalen Anzahl ist es stabil und schnell.\n",
     "\n",
     "### Fortgeschritten:\n",
     "\n",
@@ -577,13 +592,6 @@
     "    ```\n",
     "  - Achtung: Die Visualisierung der Gewichte und Bias macht keinen Sinn mehr wenn du weitere Layers hinzufügst."
    ]
-  },
-  {
-   "cell_type": "code",
-   "metadata": {},
-   "source": [],
-   "outputs": [],
-   "execution_count": null
   }
  ],
  "metadata": {
@@ -602,7 +610,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
