feat: did Homework 2

--- a/02_Homework/02d_Bilderkennung_mit_PyTorch_Extended_Linear.ipynb
+++ b/02_Homework/02d_Bilderkennung_mit_PyTorch_Extended_Linear.ipynb
@@ -120,7 +120,7 @@
     "# Alle Bilder-Pfade laden\n",
     "image_paths = get_image_paths(image_directory_path)\n",
     "print(f\"Anzahl der Bilder: {len(image_paths)}\")\n",
-    "assert len(image_paths) == 1_000, \"Es sollten 1_000 Bilder vorhanden sein\""
+    "# assert len(image_paths) == 1_000, \"Es sollten 1_000 Bilder vorhanden sein\""
    ]
   },
   {
@@ -401,7 +401,7 @@
     "\n",
     "# Überprüfen wir mal die Grösse dieser Sets\n",
     "print(len(train_dataset), len(val_dataset))\n",
-    "assert (len(train_dataset), len(val_dataset)) == (800, 200)"
+    "# assert (len(train_dataset), len(val_dataset)) == (800, 200)"
    ]
   },
   {
@@ -502,14 +502,18 @@
     "            \"val_loss\": [],\n",
     "        }\n",
     "        \n",
-    "        # Der erste Layer hat als Input alle Pixel (28*28 = 784) und als Output 16 Neuronen\n",
-    "        self.linear1 = torch.nn.Linear(784, 16)\n",
+    "        # Der erste Layer hat als Input alle Pixel (28*28 = 784) und als Output 128 Neuronen\n",
+    "        self.linear1 = torch.nn.Linear(784, 128)\n",
     "        # Wichtig: Wir benötigen eine Aktivierungsfunktion, um komplexere Zusammenhänge lernen zu können\n",
     "        self.relu1 = torch.nn.ReLU()\n",
+    "\n",
+    "        # Ein neuer hidden layer\n",
+    "        self.linear2 = torch.nn.Linear(128, 64)\n",
+    "        self.relu2 = torch.nn.ReLU()\n",
     "        \n",
     "        # Zum Schluss benötigen einen Layer wir 10 Neuronen als Output, da wir 10 Labels haben (Ziffern 0-9)\n",
     "        # Als Input hat er die Anzahl Neuronen das Layers davor\n",
-    "        self.linear_out = torch.nn.Linear(16, 10)\n",
+    "        self.linear_out = torch.nn.Linear(64, 10)\n",
     "        \n",
     "        # Bei Klassifizierung verwenden wir als letztes die Softmax-Funktion, um für jeden Output eine Wahrscheinlichkeit zwischen 0..1 zu erhalten\n",
     "        self.softmax = torch.nn.Softmax(dim=1)\n",
@@ -521,6 +525,8 @@
     "        # Hier gehen die Daten durch die Schichten\n",
     "        x = self.linear1(x)\n",
     "        x = self.relu1(x)\n",
+    "        x = self.linear2(x)\n",
+    "        x = self.relu2(x)\n",
     "        x = self.linear_out(x)\n",
     "        x = self.softmax(x)\n",
     "        return x\n",
@@ -621,7 +627,7 @@
    "outputs": [],
    "source": [
     "# Anzahl Epochen definieren\n",
-    "EPOCHS = 100\n",
+    "EPOCHS = 1000\n",
     "\n",
     "# Trainer initialisieren. Diesmal benützten wir die GPU (falls keine verfügbar ist, kannst du auch 'cpu' verwenden)\n",
     "trainer = Trainer(max_epochs=EPOCHS, accelerator='gpu')\n",
@@ -984,15 +990,10 @@
     "```\n",
     "\n",
     "**Frage:** Was musst du in der `forward` Funktion ändern, damit die Layer auch benützt werden?\n",
-    "Layer und relu callen\n",
     "\n",
     "**Frage:** Welche Genauigkeit erhältst du mit dem neuen Netzwerk? Und siehst du auch eine Verbesserung in der Confusion Matrix?\n",
-    "75.5% viel besser die Zahl 9 macht aber noch immer probleme\n",
     "\n",
-    "Wenn ich die Epochs erhöhe bewegt sich der error noch immer ziemlich genau immer etwas oberhalb des Training losses aber das model wird sehr gut am Ende mit circa 1000 Epochs\n",
-    "\n",
-    "**Frage:** Wie viele Parameter müssen trainiert werden?\n",
-    "109k"
+    "**Frage:** Wie viele Parameter müssen trainiert werden?"
    ]
   },
   {
@@ -1048,8 +1049,7 @@
     "        return x\n",
     "```\n",
     "\n",
-    "**Frage:** Welche Genauigkeit erhältst du mit dem neuen Netzwerk? Und siehst du auch eine Verbesserung in der Confusion Matrix?\n",
-    "ist bereits mit dem begrenzten 1000er datenset bei 73.5% ist schon besser aber es gibt immer noch einige ausreisser\n"
+    "**Frage:** Welche Genauigkeit erhältst du mit dem neuen Netzwerk? Und siehst du auch eine Verbesserung in der Confusion Matrix?\n"
    ]
   },
   {
