solving some exersises

--- a/03_Homework/03c_Fahrmodell_trainieren.ipynb
+++ b/03_Homework/03c_Fahrmodell_trainieren.ipynb
@@ -122,7 +122,12 @@
    "source": [
     "# 📝 Programmiere die Funktion:\n",
     "def read_data_from_json(image_path: str | Path) -> tuple[float, float]:\n",
-    "    pass"
+    "    path = Path(image_path).with_suffix('.json')\n",
+    "    with open(path, 'r') as f:\n",
+    "        data = json.load(f)\n",
+    "    steering_angle = float(data['angle'])\n",
+    "    throttle = float(data['speed'])\n",
+    "    return steering_angle, throttle"
    ]
   },
   {
@@ -175,7 +180,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "image_dir_path = Path('../data/drive-1/')\n",
+    "image_dir_path = Path('../data/')\n",
     "\n",
     "# Sollte der Pfad nicht existieren, wird hier eine Fehlermeldung ausgegeben\n",
     "if not image_dir_path.exists():\n",
@@ -663,8 +668,8 @@
    "outputs": [],
    "source": [
     "# Hyperparameter definieren\n",
-    "EPOCHS = 20\n",
-    "LEARNING_RATE = 0.005\n",
+    "EPOCHS = 100\n",
+    "LEARNING_RATE = 0.001\n",
     "\n",
     "lightning_model.lr = LEARNING_RATE\n",
     "\n",
@@ -810,7 +815,10 @@
     "def calculate_error(data: Dataset, save_to: str | Path = None) -> float:\n",
     "    # 📝 Vervollständige die funktion:\n",
     "    true_y = [angle.item() for _, angle in data]\n",
-    "    pred_y = ...\n",
+    "    pred_y = [predict(img) for img, _ in data]\n",
+    "    errors = [abs(t - p) for t, p in zip(true_y, pred_y)]\n",
+    "    mean_error = sum(errors) / len(errors)\n",
+    "    return mean_error\n",
     "\n",
     "\n",
     "error = calculate_error(val_dataset, save_to=run_directory)\n",
@@ -957,7 +965,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -971,7 +979,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
