feat: solve tasks and add data

--- a/03_Homework/03c_Fahrmodell_trainieren.ipynb
+++ b/03_Homework/03c_Fahrmodell_trainieren.ipynb
@@ -562,27 +562,27 @@
     "\n",
     "        self.layers = nn.Sequential(\n",
     "            OrderedDict(\n",
-    "                conv1 = nn.Conv2d(3, 12, 5, stride=2, padding=1),\n",
-    "                batch1 = nn.BatchNorm2d(12),\n",
+    "                conv1 = nn.Conv2d(3, 18, 5, stride=2, padding=1),\n",
+    "                batch1 = nn.BatchNorm2d(18),\n",
     "                relu1 = nn.ReLU(),\n",
     "\n",
-    "                conv2 = nn.Conv2d(12, 16, 5, stride=2, padding=1),\n",
-    "                batch2 = nn.BatchNorm2d(16),\n",
+    "                conv2 = nn.Conv2d(18, 32, 5, stride=2, padding=1),\n",
+    "                batch2 = nn.BatchNorm2d(32),\n",
     "                relu2 = nn.ReLU(),\n",
     "\n",
-    "                conv3 = nn.Conv2d(16, 32, 5, stride=2, padding=1),\n",
-    "                batch3 = nn.BatchNorm2d(32),\n",
+    "                conv3 = nn.Conv2d(32, 64, 5, stride=2, padding=1),\n",
+    "                batch3 = nn.BatchNorm2d(64),\n",
     "                relu3 = nn.ReLU(),\n",
     "\n",
-    "                conv4 = nn.Conv2d(32, 32, 3, stride=1, padding=1),\n",
-    "                batch4 = nn.BatchNorm2d(32),\n",
+    "                conv4 = nn.Conv2d(64, 128, 3, stride=1, padding=1),\n",
+    "                batch4 = nn.BatchNorm2d(128),\n",
     "                relu4 = nn.ReLU(),\n",
     "\n",
-    "                conv5 = nn.Conv2d(32, 32, 3, stride=1, padding=1),\n",
-    "                batch5 = nn.BatchNorm2d(32),\n",
+    "                conv5 = nn.Conv2d(128, 64, 3, stride=1, padding=1),\n",
+    "                batch5 = nn.BatchNorm2d(64),\n",
     "                relu5 = nn.ReLU(),\n",
     "\n",
-    "                one2one = nn.Conv2d(32, 1, 1, stride=1),\n",
+    "                one2one = nn.Conv2d(64, 1, 1, stride=1),\n",
     "\n",
     "                flatten = nn.Flatten(1, -1),\n",
     "                linear1 = nn.Linear(266, 16, bias=True),\n",
@@ -668,8 +668,8 @@
    "outputs": [],
    "source": [
     "# Hyperparameter definieren\n",
-    "EPOCHS = 100\n",
-    "LEARNING_RATE = 0.001\n",
+    "EPOCHS = 50\n",
+    "LEARNING_RATE = 0.005\n",
     "\n",
     "lightning_model.lr = LEARNING_RATE\n",
     "\n",
@@ -739,8 +739,70 @@
    "source": [
     "def plot_training(metrics: list[dict[str, list[float]]], save_to: str | Path = None):\n",
     "    # 📝 Aufgabe: Plotte die Metriken\n",
-    "    pass\n",
+    "    fig, ax1 = plt.subplots(1, 1, figsize=(10, 6))\n",
+    "    \n",
+    "    # Extract the metrics data\n",
+    "    train_losses = []\n",
+    "    val_losses = []\n",
+    "    \n",
+    "    for metric_dict in metrics:\n",
+    "        # Handle train loss\n",
+    "        if 'train_loss_step' in metric_dict:\n",
+    "            loss_value = metric_dict['train_loss_step']\n",
+    "            if hasattr(loss_value, 'item'):  # It's a tensor\n",
+    "                train_losses.append(loss_value.item())\n",
+    "            elif isinstance(loss_value, (list, tuple)):\n",
+    "                train_losses.extend([x.item() if hasattr(x, 'item') else x for x in loss_value])\n",
+    "            else:\n",
+    "                train_losses.append(float(loss_value))\n",
+    "                \n",
+    "        elif 'train_loss' in metric_dict:\n",
+    "            loss_value = metric_dict['train_loss']\n",
+    "            if hasattr(loss_value, 'item'):  # It's a tensor\n",
+    "                train_losses.append(loss_value.item())\n",
+    "            elif isinstance(loss_value, (list, tuple)):\n",
+    "                train_losses.extend([x.item() if hasattr(x, 'item') else x for x in loss_value])\n",
+    "            else:\n",
+    "                train_losses.append(float(loss_value))\n",
+    "            \n",
+    "        # Handle validation loss\n",
+    "        if 'val_loss' in metric_dict:\n",
+    "            loss_value = metric_dict['val_loss']\n",
+    "            if hasattr(loss_value, 'item'):  # It's a tensor\n",
+    "                val_losses.append(loss_value.item())\n",
+    "            elif isinstance(loss_value, (list, tuple)):\n",
+    "                val_losses.extend([x.item() if hasattr(x, 'item') else x for x in loss_value])\n",
+    "            else:\n",
+    "                val_losses.append(float(loss_value))\n",
+    "    \n",
+    "    # Plot the losses\n",
+    "    if train_losses:\n",
+    "        ax1.plot(train_losses, label='Train Loss', alpha=0.7)\n",
+    "    if val_losses:\n",
+    "        # Validation loss is typically logged less frequently, so we need to spread it out\n",
+    "        val_epochs = np.linspace(0, len(train_losses)-1, len(val_losses)) if train_losses else range(len(val_losses))\n",
+    "        ax1.plot(val_epochs, val_losses, label='Validation Loss', marker='o', markersize=3)\n",
+    "    \n",
+    "    ax1.set_title('Training and Validation Loss over Time')\n",
+    "    ax1.set_xlabel('Steps/Epochs')\n",
+    "    ax1.set_ylabel('Loss')\n",
+    "    ax1.legend()\n",
+    "    ax1.grid(True)\n",
+    "    \n",
+    "    plt.tight_layout()\n",
+    "    \n",
+    "    # Save the plot if save_to is provided\n",
+    "    if save_to:\n",
+    "        plt.savefig(Path(save_to) / 'training_metrics.png', dpi=150, bbox_inches='tight')\n",
+    "    \n",
+    "    plt.show()\n",
     "\n",
+    "# First, let's examine what's actually in the logger metrics\n",
+    "print(\"Available metrics keys:\")\n",
+    "if logger.metrics:\n",
+    "    print(f\"Number of metric dictionaries: {len(logger.metrics)}\")\n",
+    "    for i, metric_dict in enumerate(logger.metrics[:3]):  # Show first 3 for inspection\n",
+    "        print(f\"Metric dict {i} keys: {list(metric_dict.keys())}\")\n",
     "\n",
     "plot_training(logger.metrics, save_to=run_directory)"
    ]
@@ -818,6 +880,12 @@
     "    pred_y = [predict(img) for img, _ in data]\n",
     "    errors = [abs(t - p) for t, p in zip(true_y, pred_y)]\n",
     "    mean_error = sum(errors) / len(errors)\n",
+    "    #6. den Fehler zurückgibt und ihn als text file in `save_to` speichert.\n",
+    "    if save_to is not None:\n",
+    "        save_path = Path(save_to) / 'mean_error.txt'\n",
+    "        with open(save_path, 'w') as f:\n",
+    "            f.write(f\"{mean_error:.4f}\\n\")\n",
+    "        \n",
     "    return mean_error\n",
     "\n",
     "\n",
@@ -904,7 +972,53 @@
    "source": [
     "def visualize_drive_predictions(dataloader: DataLoader, save_to: str | Path = None):\n",
     "    # 📝 Vervollständige die funktion:\n",
-    "    pass\n",
+    "    # 1. Select 6 random images from the dataloader\n",
+    "    dataset = dataloader if hasattr(dataloader, '__len__') else dataloader.dataset\n",
+    "    n_samples = min(6, len(dataset))\n",
+    "    \n",
+    "    # Randomly select indices\n",
+    "    random_indices = random.sample(range(len(dataset)), n_samples)\n",
+    "    \n",
+    "    # 2. Store images and true angles\n",
+    "    images = []\n",
+    "    true_angles = []\n",
+    "    \n",
+    "    for idx in random_indices:\n",
+    "        image_tensor, angle_tensor = dataset[idx]\n",
+    "        images.append(image_tensor)\n",
+    "        true_angles.append(angle_tensor.item())\n",
+    "    \n",
+    "    # 4. Make predictions for each image\n",
+    "    predicted_angles = []\n",
+    "    for image_tensor in images:\n",
+    "        pred_angle = predict(image_tensor)\n",
+    "        predicted_angles.append(pred_angle)\n",
+    "    \n",
+    "    # 5. Plot the images with True, Pred, and Error values\n",
+    "    fig, axes = plt.subplots(2, 3, figsize=(15, 8))\n",
+    "    axes = axes.flatten()\n",
+    "    \n",
+    "    for i in range(n_samples):\n",
+    "        # Convert tensor to displayable format\n",
+    "        img_display = images[i].permute(1, 2, 0).numpy()\n",
+    "        \n",
+    "        true_angle = true_angles[i]\n",
+    "        pred_angle = predicted_angles[i]\n",
+    "        error = abs(true_angle - pred_angle)\n",
+    "        \n",
+    "        axes[i].imshow(img_display)\n",
+    "        axes[i].set_title(f'True: {true_angle:.2f}°\\nPred: {pred_angle:.2f}°\\nError: {error:.2f}°')\n",
+    "        axes[i].axis('off')\n",
+    "    \n",
+    "    plt.tight_layout()\n",
+    "    \n",
+    "    # 6. Save the plot if save_to is provided\n",
+    "    if save_to:\n",
+    "        save_path = Path(save_to) / 'drive_predictions_visualization.png'\n",
+    "        plt.savefig(save_path, dpi=150, bbox_inches='tight')\n",
+    "        print(f\"Plot saved to: {save_path}\")\n",
+    "    \n",
+    "    plt.show()\n",
     "\n",
     "\n",
     "visualize_drive_predictions(val_dataset, save_to=run_directory)"
