--- a/01_Homework/01d_Python_Datascience.ipynb
+++ b/01_Homework/01d_Python_Datascience.ipynb
@@ -308,7 +308,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
