--- a/02_Homework/02d_Bilderkennung_mit_PyTorch.ipynb
+++ b/02_Homework/02d_Bilderkennung_mit_PyTorch.ipynb
@@ -40,21 +40,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "kxgJCfgVuzg4",
     "pycharm": {
      "name": "#%%\n"
     }
    },
+   "outputs": [],
    "source": [
     "import torch\n",
     "\n",
     "print(f'Is GPU (Cuda) available: {torch.cuda.is_available()}')\n",
     "device = torch.device('cuda') if torch.cuda.is_available() else torch.device('mps') if torch.mps.is_available() else torch.device(\"cpu\")\n",
     "print(torch.cuda.get_device_name(device=device))"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -76,6 +76,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -86,6 +87,7 @@
      "name": "#%%\n"
     }
    },
+   "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "\n",
@@ -96,32 +98,30 @@
     "    print(f\"🛑 Fehler: Der Pfad ./mnist_1k/ existiert nicht. Entpacke das .zip file.\")\n",
     "else:\n",
     "    print(f\"Alles gut👍 der Pfad {image_directory_path} wurde gefunden\")"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Funktion, um alle Bilder im Ordner zu finden und als Path Objekte zurückzugeben\n",
     "def get_image_paths(path: Path) -> list:\n",
     "    return list(sorted(path.glob('**/*.png')))"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Alle Bilder-Pfade laden\n",
     "image_paths = get_image_paths(image_directory_path)\n",
     "print(f\"Anzahl der Bilder: {len(image_paths)}\")\n",
     "assert len(image_paths) == 1_000, \"Es sollten 1_000 Bilder vorhanden sein\""
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -137,7 +137,9 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "from PIL import Image\n",
     "import matplotlib.pyplot as plt\n",
@@ -148,9 +150,7 @@
     "plt.imshow(image, cmap='gray')\n",
     "plt.title(f\"Datei {image_path.name}\")\n",
     "plt.show()"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -177,31 +177,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Funktion, welche aus dem Dateipfad das Label extrahiert\n",
     "def get_label(path: str) -> int:\n",
     "    pass"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# SOLUTION\n",
     "\n",
     "# Funktion, welche aus dem Dateipfad das Label extrahiert\n",
     "def get_label(path) -> int:\n",
     "    return int(Path(path).stem[-1])"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# TESTS der Funktion get_label\n",
     "\n",
@@ -209,9 +211,7 @@
     "assert get_label(test_path) == 2, \"Fehler bei der Extraktion des Labels (2)\"\n",
     "test_path = \"02_Homework/mnist_1k/mnist999_0.png\"\n",
     "assert get_label(test_path) == 0, \"Fehler bei der Extraktion des Labels (0)\""
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -228,7 +228,9 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# On-hot encoding des Labels\n",
     "def label_encoding(label: int) -> torch.Tensor:\n",
@@ -246,9 +248,7 @@
     "assert label_encoding(4).tolist() == [0, 0, 0, 0, 1, 0, 0, 0, 0, 0], \"Fehler bei der Kodierung des Labels (9)\"\n",
     "assert label_decoding(torch.tensor([1, 0, 0, 0, 0, 0, 0, 0, 0, 0])) == 0, \"Fehler bei der Dekodierung des Labels (0)\"\n",
     "assert label_decoding(torch.tensor([0, 0, 0, 0, 0.8, 0, 0, 0, 0, 0])) == 4, \"Fehler bei der Dekodierung des Labels (9)\""
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -273,7 +273,9 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "from torch.utils.data import Dataset\n",
     "from PIL import Image\n",
@@ -292,13 +294,13 @@
     "    # Gebe das den Bild-Tensor und das encodierte Label für den Index idx zurück\n",
     "    def __getitem__(self, idx):\n",
     "        pass"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "from torch.utils.data import Dataset\n",
     "from PIL import Image\n",
@@ -327,13 +329,13 @@
     "        label_encoded = label_encoding(label)\n",
     "        \n",
     "        return image_tensor, label_encoded"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# TESTS ImageDataset\n",
     "\n",
@@ -362,9 +364,7 @@
     "\n",
     "# Cleanup\n",
     "import shutil; shutil.rmtree(p)"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -375,7 +375,9 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "from torch.utils.data import DataLoader, random_split\n",
     "\n",
@@ -389,13 +391,13 @@
     "# Überprüfen wir mal die Grösse dieser Sets\n",
     "print(len(train_dataset), len(val_dataset))\n",
     "assert (len(train_dataset), len(val_dataset)) == (800, 200)"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Erstellen der DataLoaders\n",
     "BATCH_SIZE = 128\n",
@@ -406,9 +408,7 @@
     "images, labels = next(iter(training_loader))\n",
     "print(f\"Input shape: {images.shape}\")\n",
     "print(f\"Output shape {labels.shape}\")"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -465,6 +465,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -475,6 +476,7 @@
      "name": "#%%\n"
     }
    },
+   "outputs": [],
    "source": [
     "from lightning import LightningModule, Trainer\n",
     "\n",
@@ -530,12 +532,11 @@
     "\n",
     "    def configure_optimizers(self):\n",
     "        return torch.optim.Adam(self.parameters(), lr=self.lr)"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -547,15 +548,14 @@
      "name": "#%%\n"
     }
    },
+   "outputs": [],
    "source": [
     "# Wir können uns ansehen, wie die Architektur des Modells aussieht.\n",
     "# Hier sieht man die einzelnen Schichten, welche Ausgangssignale (Output Shape) sie erzeugen, sowie die Anzahl künstlicher Neuronen (Param #), welche sie enthalten.\n",
     "\n",
     "from lightning.pytorch.callbacks import ModelSummary\n",
     "ModelSummary().on_fit_start(Trainer(), DenseModel())"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -595,6 +595,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -606,6 +607,7 @@
      "name": "#%%\n"
     }
    },
+   "outputs": [],
    "source": [
     "# Anzahl Epochen definieren\n",
     "EPOCHS = 100\n",
@@ -616,13 +618,13 @@
     "# Modell initialisieren\n",
     "LEARNING_RATE = 0.001\n",
     "model = DenseModel(lr=LEARNING_RATE)"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "%%time\n",
     "# ⬆ Die Zeile \"%%time\" oben, sorgt dafür, dass unten angezeigt wird, wie lange es gedauert hat, diese Notebook Zelle auszuführen.\n",
@@ -633,9 +635,7 @@
     "trainer.fit(model, training_loader, validation_loader)\n",
     "\n",
     "# Unterhalb sehen wir den Vortschritt:"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -653,7 +653,9 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Nun können wir uns die Trainings- und Validierungsfehler anschauen\n",
     "train_loss = model.logged_metrics[\"train_loss\"]\n",
@@ -678,9 +680,7 @@
     "\n",
     "# Wir sehen, wie der Fehler immer geringer wird. Am Anfang schneller, wird die Kurve sehr flach\n",
     "# Tipp: Schalte oben die logarithmische Skala ein, um die Kurve besser zu sehen!"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -691,14 +691,14 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Der Fehler am Ende des Trainings war:\n",
     "print(f\"Trainingsfehler: {train_loss[-1]:.3f}\")\n",
     "print(f\"Validierungsfehler: {val_loss[-1]:.3f}\")"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -711,7 +711,9 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "def predict(img_tensor):\n",
     "    model.eval()\n",
@@ -724,9 +726,7 @@
     "image_tensor, _ = dataset[0]\n",
     "pred_label, predict_props = predict(image_tensor)\n",
     "print(f\"Predicted label: {pred_label}\")"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -748,7 +748,9 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "import random\n",
     "from torchvision.transforms.functional import to_pil_image\n",
@@ -778,9 +780,7 @@
     "true_label = label_decoding(label_encoded)\n",
     "correct = pred_label == true_label\n",
     "print(f\"Die Vorhersage ist {'korrekt 👍️' if correct else 'falsch 😿'}\")"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -820,6 +820,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -831,6 +832,7 @@
      "name": "#%%\n"
     }
    },
+   "outputs": [],
    "source": [
     "# Ein paar (zufällige) Vorhersagen aus dem Validationset machen.\n",
     "\n",
@@ -850,9 +852,7 @@
     "        ax.set_title(f\"{is_correct}: {label_decoded} vorhergesagt als {prediction_decoded}\\n(Warscheinlichkeit von {prediction.max().item():.1%})\")\n",
     "        ax.title.set_color('green' if label_decoded==prediction_decoded else 'red')\n",
     "        # print(f\"{'RICHTIG' if label_decoded==prediction_decoded else 'FALSCH'}\\t Ziffer {label_decoded} vorhergesagt als Ziffer {prediction_decoded} mit einer Warscheinlichkeit von {prediction.max().item():.1%}\")\n"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -865,7 +865,9 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Wir lassen und das gesamte Validation-Dataset durch das Modell laufen und die Vorhersagen machen\n",
     "pred_labels = []\n",
@@ -883,9 +885,7 @@
     "accuracy = correct / len(val_dataset)\n",
     "\n",
     "print(f\"Genauigkeit: {accuracy:.2%}\")"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -910,7 +910,9 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "from torchmetrics import ConfusionMatrix\n",
     "\n",
@@ -925,9 +927,7 @@
     "\n",
     "# Zum Schluss plotten wir die Confusion Matrix\n",
     "confmat.plot()"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1054,7 +1054,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -1068,7 +1068,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
