improving model saving

--- a/03_Homework/03c_Fahrmodell_trainieren.ipynb
+++ b/03_Homework/03c_Fahrmodell_trainieren.ipynb
@@ -353,6 +353,7 @@
     "            saturation=0.2,\n",
     "            hue=0.1,\n",
     "        ),\n",
+    "        # v2.Pad(padding=10),\n",
     "        # Platz für weitere Transformationen (siehe Zusatzaufgabe)\n",
     "    ]\n",
     ")"
@@ -1049,10 +1050,12 @@
    "outputs": [],
    "source": [
     "# Definieren, wo das Model gespeichert werden soll. Erstelle den Ordner, falls er noch nicht existiert.\n",
-    "model_path = Path('../models/drive/DriveModel_v1.onnx')\n",
+    "\n",
+    "model_path = Path(f'../models/drive/{run_directory.name}/DriveModel_v1.onnx')\n",
     "\n",
     "# Zur Sicherheit prüfen, ob das Model bereits existiert, (lösche es, wenn du es überschreiben willst. Oder benenne es um)\n",
-    "assert not model_path.exists(), f'Das Model existiert bereits'\n",
+    "assert not model_path.exists(), 'Das Model existiert bereits'\n",
+    "model_path.parent.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "# Model speichern\n",
     "example_input = train_dataset[0][0].unsqueeze(0)\n",
